--- a/com.aurum.rust-deck.sdPlugin/ui/time-display.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/time-display.html
@@ -14,6 +14,15 @@
     </style>
 </head>
 <body>
+    <sdpi-item label="Custom Title">
+        <sdpi-textfield setting="customTitle" placeholder="Enter title to display on button"></sdpi-textfield>
+    </sdpi-item>
+    <sdpi-item label="Title Position">
+        <sdpi-select setting="titlePosition" default="top">
+            <option value="top">Top</option>
+            <option value="bottom">Bottom</option>
+        </sdpi-select>
+    </sdpi-item>
     <sdpi-item label="Display Format">
         <sdpi-select setting="displayFormat" default="time">
             <option value="time">Current Time</option>
