--- a/com.aurum.rust-deck.sdPlugin/ui/time-display.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/time-display.html
@@ -11,11 +11,14 @@
             padding: 16px;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
+        sdpi-textarea {
+            min-height: 60px;
+        }
     </style>
 </head>
 <body>
     <sdpi-item label="Custom Title">
-        <sdpi-textfield setting="customTitle" placeholder="Enter title to display on button"></sdpi-textfield>
+        <sdpi-textarea setting="customTitle" placeholder="Enter title to display on button (supports multiple lines)"></sdpi-textarea>
     </sdpi-item>
     <sdpi-item label="Title Position">
         <sdpi-select setting="titlePosition" default="top">
