Add base URL setting to Time Display action with debounce handling for input changes

--- a/com.aurum.rust-deck.sdPlugin/ui/time-display.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/time-display.html
@@ -34,5 +34,8 @@
             <option value="day_length">Day Length</option>
         </sdpi-select>
     </sdpi-item>
+    <sdpi-item label="Base URL">
+        <sdpi-textfield setting="baseUrl" placeholder="Enter base URL for API (e.g. http://localhost:8080)"></sdpi-textfield>
+    </sdpi-item>
 </body>
 </html> 
