--- a/com.aurum.rust-deck.sdPlugin/ui/server-info.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/server-info.html
@@ -4,6 +4,7 @@
     <title>Server Info Settings</title>
     <meta charset="utf-8" />
     <script src="https://sdpi-components.dev/releases/v3/sdpi-components.js"></script>
+    <script src="global-settings.js" defer></script>
     <style>
         body {
             margin: 0;
@@ -13,9 +14,6 @@
     </style>
 </head>
 <body>
-    <sdpi-item label="Server URL">
-        <sdpi-textfield setting="serverUrl" placeholder="Enter server URL (e.g. http://localhost:8080/info)"></sdpi-textfield>
-    </sdpi-item>
     <sdpi-item label="Update Interval">
         <sdpi-select setting="updateInterval" default="30">
             <option value="5">5 seconds</option>
@@ -27,5 +25,8 @@
             <option value="300">5 minutes</option>
         </sdpi-select>
     </sdpi-item>
+    <sdpi-item label="Base URL (Global Setting)">
+        <sdpi-textfield setting="baseUrl" global placeholder="Enter base URL for API (e.g. http://localhost:8080)"></sdpi-textfield>
+    </sdpi-item>
 </body>
-</html> 
+</html>
