--- a/com.aurum.rust-deck.sdPlugin/ui/time-display.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/time-display.html
@@ -35,6 +35,9 @@
             <option value="day_length">Day Length</option>
         </sdpi-select>
     </sdpi-item>
+    <sdpi-item label="Update Interval (seconds)">
+        <sdpi-textfield setting="updateInterval" default="60" placeholder="Enter update interval in seconds (e.g. 60)"></sdpi-textfield>
+    </sdpi-item>
     <sdpi-item label="Base URL (Global Setting)">
         <sdpi-textfield setting="baseUrl" global placeholder="Enter base URL for API (e.g. http://localhost:8080)"></sdpi-textfield>
     </sdpi-item>
