--- a/com.aurum.rust-deck.sdPlugin/ui/smart-devices.html
+++ b/com.aurum.rust-deck.sdPlugin/ui/smart-devices.html
@@ -16,6 +16,9 @@
 <body>
     <sdpi-item label="Base URL (Global Setting)">
         <sdpi-textfield setting="baseUrl" global placeholder="Enter base URL for API (e.g. http://localhost:8080)"></sdpi-textfield>
+        <sdpi-checkbox setting="hideSwitches" label="Hide Smart Switches"></sdpi-checkbox>
+        <sdpi-checkbox setting="hideAlarms" label="Hide Smart Alarms"></sdpi-checkbox>
+        <sdpi-checkbox setting="hideSwitchesGroups" label="Hide Switches Groups"></sdpi-checkbox>
     </sdpi-item>
 </body>
 </html>
